fixed feature points from wrapping

--- a/app/assets/stylesheets/widgets/_ad_landing_page/feature_points.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/feature_points.scss
@@ -12,7 +12,13 @@
 	}
 
 	.point-item {
+		display: table;
 		font-weight: 600;
+	}
+
+	.item-wrap {
+		display: table-cell;
+		vertical-align: middle;
 	}
 
 	.icon {
